# OllamaServer

./: .gitignore  README.md  README_zh-CN.md  app.json  index.js  metro.config.js  package-lock.json  package.json
android/: .gitignore  build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/ollamaserver/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/io/kindbrave/ollamaserver/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/io/kindbrave/ollamaserver/module/: FileUploadModule.kt  HashModule.kt  LogSaveModule.kt  OllamaServiceModule.java  OllamaServiceModule.kt
android/app/src/main/java/io/kindbrave/ollamaserver/reactpkg/: AppReactPackage.java  FileUploadPackage.java  HashPackage.java  OllamaServicePackage.java
android/app/src/main/java/io/kindbrave/ollamaserver/service/: OllamaService.kt
android/app/src/main/java/io/kindbrave/ollamaserver/utils/: Api.kt  LogUtils.kt  OllamaExecutor.kt
android/app/src/main/jni/: dummy.cpp
android/app/src/main/res/drawable/: ollama.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
app/: App.tsx
app/api/: API.ts  OllamaApi.ts
app/components/: CustomModal.tsx  DrawerMenu.tsx  LoadingDialog.tsx  ModelSelector.tsx
app/home/: HomePage.tsx
app/i18n/: i18next.ts
app/logs/: LogPage.tsx
app/model/: Chat.ts  Conversation.ts  Create.ts  Ps.ts  Pull.ts  Tag.ts
app/settings/: ModelRecommend.ts  SettingsPage.tsx
ios/: Podfile
(+17 files in other folders)
